[gd_scene load_steps=11 format=3 uid="uid://cvkefgxh2poo3"]

[ext_resource type="Script" path="res://scripts/controllers/game_controlle.gd" id="1_5g8tf"]
[ext_resource type="Resource" uid="uid://dk2nt2qj1k3oo" path="res://resources/thememusica.tres" id="2_03m28"]
[ext_resource type="Texture2D" uid="uid://8joai1xd4qbc" path="res://assets/sprites/braco_d.png" id="3_j78a7"]
[ext_resource type="Texture2D" uid="uid://0v8awhuure02" path="res://assets/sprites/hangman-game-og-share.webp" id="3_tjcxt"]
[ext_resource type="Texture2D" uid="uid://dn5wdxlo1bsuy" path="res://assets/sprites/braco_e.png" id="4_6whix"]
[ext_resource type="Texture2D" uid="uid://lahdhe0n0c4a" path="res://assets/sprites/tronco2.png" id="5_o4h1m"]
[ext_resource type="Texture2D" uid="uid://bym5lckghydkx" path="res://assets/sprites/cabeça.png" id="6_upte2"]
[ext_resource type="Texture2D" uid="uid://ivgedtbqu8tx" path="res://assets/sprites/perna_d.png" id="7_fv02d"]
[ext_resource type="Texture2D" uid="uid://ddo3el4yjhg10" path="res://assets/sprites/perna_e.png" id="8_h4540"]
[ext_resource type="Texture2D" uid="uid://uhu674ki7qaq" path="res://assets/sprites/resrto da forca.jpg" id="10_kv1lq"]

[node name="musica" type="CanvasLayer"]
script = ExtResource("1_5g8tf")
quiz = ExtResource("2_03m28")
color_right = Color(0, 0.494118, 0, 0.85098)
color_wrong = Color(1, 0, 0, 0.858824)

[node name="content" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestionInfo" type="VBoxContainer" parent="content"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.718
anchor_right = 0.718
offset_left = -400.92
offset_right = 400.08
offset_bottom = 473.0
grow_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="QuestionText" type="Label" parent="content/QuestionInfo"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Pergunta"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ImageHolder" type="Panel" parent="content/QuestionInfo"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="QuestionImage" type="TextureRect" parent="content/QuestionInfo/ImageHolder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="QuestionVideo" type="VideoStreamPlayer" parent="content/QuestionInfo/ImageHolder"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand = true

[node name="questionAudio" type="AudioStreamPlayer2D" parent="content/QuestionInfo/ImageHolder"]

[node name="QuestionHolder" type="VBoxContainer" parent="content"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.718
anchor_top = 0.965
anchor_right = 0.718
anchor_bottom = 0.965
offset_left = -393.92
offset_top = -491.16
offset_right = 393.08
offset_bottom = -0.160034
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40

[node name="Button2" type="Button" parent="content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40

[node name="Button3" type="Button" parent="content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40

[node name="ColorRect" type="ColorRect" parent="content"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.212305, 0.212305, 0.212305, 1)

[node name="btreplay" type="Button" parent="content/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -398.0
offset_top = -392.0
offset_right = 407.0
offset_bottom = -228.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 65
text = "Jogar Novamente
"
flat = true

[node name="Hangman-game-og-share" type="Sprite2D" parent="."]
position = Vector2(282, 435)
scale = Vector2(1.35156, 1.49219)
texture = ExtResource("3_tjcxt")

[node name="BracoD" type="Sprite2D" parent="."]
position = Vector2(398.938, 691.846)
scale = Vector2(0.184339, 0.184339)
texture = ExtResource("3_j78a7")

[node name="BracoE" type="Sprite2D" parent="."]
position = Vector2(530.25, 680.985)
scale = Vector2(0.227564, 0.227564)
texture = ExtResource("4_6whix")

[node name="Tronco2" type="Sprite2D" parent="."]
position = Vector2(461.25, 668.985)
scale = Vector2(0.174669, 0.174669)
texture = ExtResource("5_o4h1m")

[node name="Cabeça" type="Sprite2D" parent="."]
position = Vector2(475.25, 433.985)
scale = Vector2(0.412898, 0.412898)
texture = ExtResource("6_upte2")

[node name="PernaD" type="Sprite2D" parent="."]
position = Vector2(436.25, 878.985)
scale = Vector2(0.155405, 0.155405)
texture = ExtResource("7_fv02d")

[node name="PernaE" type="Sprite2D" parent="."]
position = Vector2(521.25, 873.985)
scale = Vector2(0.145869, 0.145869)
texture = ExtResource("8_h4540")

[node name="ResrtoDaForca" type="Sprite2D" parent="."]
position = Vector2(109, 919.75)
scale = Vector2(1.41379, 1.53352)
texture = ExtResource("10_kv1lq")

[connection signal="pressed" from="content/ColorRect/btreplay" to="." method="_on_btreplay_pressed"]
